# embed-config

./: README.md
.github/workflows/: build.yml
embed-config/: CHANGELOG.md  embed-config.cabal
embed-config/config/: settings.yml  settings2.yml
embed-config/src/Data/Yaml/Config/: Embed.hs  Kebab.hs
embed-config/test/: embed-config-test.hs
