cabal-version: 1.12

name:           embed-config
version:        0.0.0.0
description:    Please see the README on GitHub at <https://github.com/simspace/embed-config#readme>
synopsis:       {{{TODO}}}
category:       {{{TODO}}}
homepage:       https://github.com/simspace/embed-config#readme
bug-reports:    https://github.com/simspace/embed-config/issues
author:         Cary Robbins
maintainer:     carymrobbins@gmail.com
copyright:      2022 SimSpace
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/simspace/embed-config

library
  exposed-modules:
  other-modules:
      Paths_embed_config
  hs-source-dirs: src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -fwarn-tabs -Wincomplete-uni-patterns
    -Werror=missing-home-modules -eventlog +RTS -A32M -RTS

test-suite embed-config-test
  type: exitcode-stdio-1.0
  main-is: embed-config-test.hs
  hs-source-dirs: test
  ghc-options:
    -Wall -fwarn-tabs -Wincomplete-uni-patterns
    -Werror=missing-home-modules -eventlog +RTS -A32M -RTS
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hspec
    , embed-config
  default-language: Haskell2010
